<resources>
    <string name="app_name">Сравнение вкладов</string>
    <string name="action_settings">Настройки</string>
    <string name="off_adv">Выключить рекламу</string>
    <string name="about">О программе</string>
    <string name="feedback">Оставить отзыв</string>
    <string name="sendEmail">Отправить письмо</string>

    <string name="sendEmail_error">Не найдено установленной программы для отправки писем!</string>

    <string name="choose_data">Выберите дату</string>

    <string name="help_title">Помощь</string>
    <string name="help_category_one">Значения полей</string>
    <string name="help_category_two">Порядок работы</string>
    <string name="help_category_three">Принципы рассчета</string>
    <string name="help_dismiss">Отмена</string>

    <string name="about_text">Калькулятор валютных депозитов</string>
    <string name="about_text_version">Версия</string>

    <string name="txtCurrencyA">Валюта 1</string>
    <string name="txtCurrencyB">Валюта 2</string>
    <string name="txtExchangeRate">Конверсия</string>
    <string name="txtSumm">Сумма вклада</string>
    <string name="txtPercent">Годовая % ставка</string>
    <string name="txtCapital">Капитализация</string>
    <string name="txtDateBegin">Дата начала</string>
    <string name="txtTimeperiodText">Срок</string>
    <string name="txtDateEnd">Дата окончания</string>
    <string name="txtGrow">Прирост %</string>
    <string name="txtProfit">Прибыль</string>
    <string name="txtFullSumm">Итого на вкладе</string>

    <string name="txtTypeConversion">Конверсия</string>
    <string name="txtCross">Кросс-курс</string>

    <string name="cmpr_txtFirstSection">Разница прибыли первого вклада по отношению к второму при текущем обменном курсе</string>
    <string name="cmpr_txtFirstSection_new">Сравнение вкладов</string>
    <string name="cmpr_txtСurrency">Курс</string>

    <string name="cmpr_txtExcRateCurrent">Обменный курс (текущий)</string>
    <string name="cmpr_txtExcRateCurrent_new">При текущем обменном курсе</string>

    <string name="cmpr_txtInPercent">В процентах</string>
    <string name="cmpr_txtInCur">В валюте</string>
    <string name="cmpr_txtChooseCur">Выбрать обменный курс</string>
    <string name="cmpr_txtNoDiffInProfit">Отсутствует разница в прибыли при курсе</string>

    <string name="cmpr_txtDiffProfits">Разница в прибыли</string>
    <string name="cmpr_txtDiffFull">Разность итоговых сумм на вкладах</string>

    <string name="cmpr_txtExcRateCalc">Обменный курс (расчетный)</string>

    <string name="cmpr_txtThirdSection">Разница при произвольном обменном курсе</string>
    <string name="cmpr_txtExcRateVar">Обменный курс (произвольный)</string>

    <string-array name="timeperiods_array">
        <item>день</item>
        <item>месяц</item>
        <item>год</item>
    </string-array>

    <string-array name="conversion_array">
        <item>Валюта 1 * </item>
        <item>Валюта 1 / </item>
    </string-array>

    <string-array name="capitals_array">
        <item>нет</item>
        <item>ежедневно</item>
        <item>ежемесячно</item>
        <item>раз в квартал</item>
        <item>ежегодно</item>
    </string-array>

    <string-array name="currencies_array">
        <item>BLR</item>
        <item>RUR</item>
        <item>EUR</item>
        <item>USD</item>
        <item>UAH</item>
    </string-array>

    <string-array name="tabs_array">
        <item>Вклад 1</item>
        <item>Вклад 2</item>
        <item>Сравнение</item>
    </string-array>


    <string name="title_activity_settings">Настройки</string>
    <string name="pref_header_general">Общие настройки</string>
    <string name="pref_header_other_general">Другие настройки</string>
    <string name="russian_tax">Pоссийский налог</string>
    <string name="ukr_tax">Украинский налог</string>
    <string name="show_overlays">Показать подсказки</string>
    <string name="tax_description">В РФ доходы по ставке выше ключевой облагаются налогом.</string>
    <string name="ukr_tax_description">В Украине любой доход со вкладов облагается налогом.</string>
    <string name="show_overlays_description">Подсказки будут показаны при следующей запуске</string>
    <string name="tax_percent">Величина налога</string>
    <item name="default_rus_tax_percent_int" format="integer" type="dimen">35</item>
    <item name="default_ukr_tax_percent_int" format="integer" type="dimen">20</item>

    <string name="key_percent">Ключевая ставка</string>
    <string name="key_percent_description">Налог будет рассчитываться для вкладов в рублях, если их ставка превышает указанную. </string>
    <item name="default_key_percent_float" format="float" type="dimen">18.25</item>
    <string name="key_percent_foreign">Максимальная безналоговая ставка для вкладов в иностранной валюте</string>
    <string name="key_percent_foreign_description">Вклады в иностранной валюте по ставке выше указанной будут облагаться налогом.</string>
    <item name="key_percent_foreign_float" format="float" type="dimen">9</item>
    <string name="pref_set_language">Выбрать язык</string>
    <string-array name="pref_list_lang">
        <item>Русский</item>
        <item>Белорусский</item>
        <item>Украинский</item>
    </string-array>
    <string-array name="pref_list_lang_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="banner_ad_unit_id">ca-app-pub-8104407829518430/3628038307</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_test2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_test3">ca-app-pub-3940256099942544/6300978111</string>

</resources>
