<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_key_settings">

        <ListPreference
            android:key="language"
            android:title="@string/pref_set_language"
            android:defaultValue="-1"
            android:entries="@array/pref_list_lang"
            android:entryValues="@array/pref_list_lang_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_header_other_general"
        android:key="pref_key_other_settings">

        <CheckBoxPreference
            android:key="russian_tax"
            android:title="@string/russian_tax"
            android:summary="@string/tax_description"
            android:defaultValue="false" />

        <EditTextPreference
            android:dependency="russian_tax"
            android:key="tax_percent"
            android:title="@string/tax_percent"
            android:defaultValue="@string/pref_default_tax_percent"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:dependency="russian_tax"
            android:key="key_percent"
            android:title="@string/key_percent"
            android:defaultValue="@string/pref_default_key_percent"
            android:summary="@string/key_percent_description"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:dependency="russian_tax"
            android:key="key_percent_foreign"
            android:title="@string/key_percent_foreign"
            android:defaultValue="@string/pref_default_key_percent_foreign"
            android:summary="@string/key_percent_foreign_description"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <CheckBoxPreference
            android:key="show_overlays"
            android:title="@string/show_overlays"
            android:summary="@string/show_overlays_description"
            android:defaultValue="true" />

    </PreferenceCategory>


</PreferenceScreen>