<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/feedback" />

    <item
        android:id="@+id/off_adv"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/of_adv" />

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/help_title" />

    <item
        android:id="@+id/sendEmail"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sendEmail" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about" />
</menu>
