<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"> //3F51B5

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:text="@string/cmpr_txtFirstSection"
                android:id="@+id/textView"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtPrecentProfitNow"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurOneProfitNow"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:text="@string/cmpr_txtExcRateCurrent"
                android:id="@+id/textView5"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurTwoProfitNow"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtExcRateNow"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cmpr_txtSecondSection"
                android:id="@+id/textView6"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:text="0 %"
                android:id="@+id/txtPrecentProfitCalc"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurOneProfitCalc"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cmpr_txtExcRateCalc"
                android:id="@+id/textView10"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurTwoProfitCalc"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtExcRateCalc" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cmpr_txtThirdSection"
                android:id="@+id/textView11"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurOneProfitDinamic"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtCurTwoProfitDinamic"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cmpr_txtExcRateVar"
                android:id="@+id/textView15"
                android:layout_column="0" />

            <TextView
                style="@style/MyViewRightColumn"
                android:id="@+id/txtPrecentProfitDinamic"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtExcRateDinamic" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_column="0" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewEmptyForScroll" />
        </TableRow>

    </TableLayout>

    </ScrollView>

</FrameLayout>